# cosmic-ext-applet-workspaces

./: .gitignore  Cargo.toml  README.md  justfile
config/: config.toml
i18n/en/: cosmic_ext_applet_workspaces.ftl
src/: config.rs  main.rs  wayland.rs  wayland_subscription.rs
src/components/: app.rs
