[package]
name = "cosmic-ext-applet-workspaces"
version = "0.0.1"
authors = ["Nick Dowsett <nick42d AT gmail.com>"]
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1.0.100"
cctk = { git = "https://github.com/pop-os/cosmic-protocols", package = "cosmic-client-toolkit", rev = "d0e95be" }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols", default-features = false, features = [
    "client",
], rev = "d0e95be" }
futures = "0.3"
i18n-embed = { version = "0.16.0", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "desktop-systemd-scope",
    "winit",
] }
rust-embed = "8.9.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-log = "0.2.0"
tokio = { version = "1.49.0", features = ["full"] }

[profile.release]
opt-level = 3
panic = "abort"
lto = "thin"

[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }

[patch."https://github.com/pop-os/cosmic-protocols"]
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols//", branch = "main" }
cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols//", branch = "main" }